# Advent-of-Code-2024

./: .gitignore  CMakeLists.txt
Day 1/: CMakeLists.txt  d1-solution.cpp
Day 2/: CMakeLists.txt  d2-solution.cpp
Day 3/: CMakeLists.txt  d3-solution.cpp
Day 4/: CMakeLists.txt  d4-solution.cpp
Day 5/: CMakeLists.txt  d5-solution.cpp
